--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
         }
         .bottom-left {
             left: 10px;
-            background: url('https://i.imgur.com/nP0e0WN.png') no-repeat center/contain;
+/*             background: url('https://i.imgur.com/nP0e0WN.png') no-repeat center/contain; */
         }
         .bottom-right {
             right: 10px;
-            background: url('https://i.imgur.com/nP0e0WN.png') no-repeat center/contain;
+/*             background: url('https://i.imgur.com/nP0e0WN.png') no-repeat center/contain; */
             transform: scaleX(-1);
         }
 
