--- a/mitaanddaddy.html
+++ b/mitaanddaddy.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    <link rel="icon" href="ico.png">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -48,12 +49,12 @@
             height: 50px;
             background: #ff4081;
             border-radius: 50%;
-            top: 10%;
+            top: 8%;
             left: 20%;
             opacity: 0.75;
         }
         .balloon:nth-child(2) {
-            left: 70%;
+            left: 78%;
             background: #ffcc00;
         }
         .balloon:nth-child(3) {
@@ -69,11 +70,9 @@
         }
         .bottom-left {
             left: 10px;
-/*             background: url('https://i.imgur.com/nP0e0WN.png') no-repeat center/contain; */
         }
         .bottom-right {
             right: 10px;
-/*             background: url('https://i.imgur.com/nP0e0WN.png') no-repeat center/contain; */
             transform: scaleX(-1);
         }
 
@@ -96,15 +95,9 @@
             0% { opacity: 0.5; transform: scale(1); }
             100% { opacity: 1; transform: scale(1.3); }
         }
-        @media (max-width: 600px) {
-            h1 {
-                font-size: 2rem;
-            }
-            p {
-                font-size: 1rem;
-            }
-            .header a {
-                font-size: 1rem;
+        @media (max-width: 1200px) {
+            .container{
+                max-width: 70%;
             }
         }
     </style>
