--- a/surprise.html
+++ b/surprise.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    <link rel="icon" href="ico.png">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -36,6 +37,11 @@
         .header a:hover {
             color: white;
         }
+        .image{
+            margin-top: 18%;
+            border: 5px solid black;
+            border-radius: 1%;
+        }
         .decorations {
             position: absolute;
             width: 100%;
@@ -48,12 +54,12 @@
             height: 50px;
             background: #ff4081;
             border-radius: 50%;
-            top: 10%;
+            top: 8%;
             left: 20%;
             opacity: 0.75;
         }
         .balloon:nth-child(2) {
-            left: 70%;
+            left: 78%;
             background: #ffcc00;
         }
         .balloon:nth-child(3) {
@@ -69,11 +75,9 @@
         }
         .bottom-left {
             left: 10px;
-/*             background: url('https://i.imgur.com/nP0e0WN.png') no-repeat center/contain; */
         }
         .bottom-right {
             right: 10px;
-/*             background: url('https://i.imgur.com/nP0e0WN.png') no-repeat center/contain; */
             transform: scaleX(-1);
         }
 
@@ -96,15 +100,9 @@
             0% { opacity: 0.5; transform: scale(1); }
             100% { opacity: 1; transform: scale(1.3); }
         }
-        @media (max-width: 600px) {
-            h1 {
-                font-size: 2rem;
-            }
-            p {
-                font-size: 1rem;
-            }
-            .header a {
-                font-size: 1rem;
+        @media (max-width: 1200px) {
+            .container{
+                max-width: 70%;
             }
         }
     </style>
@@ -119,6 +117,9 @@
         <div class="balloon"></div>
         <div class="balloon"></div>
         <div class="balloon"></div>
+    </div>
+    <div>
+        <img class="image" src="surprise.png">
     </div>
     <div class="bottom-decor bottom-left">
         <div class="sparkle"></div>
