--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            height: 100vh;
+            min-height: 100vh; /* Change from height: 100vh to min-height */
             background: linear-gradient(135deg, #ff9a9e, #fad0c4);
             font-family: Atma, sans-serif;
             text-align: center;
-            overflow: hidden;
+            overflow-y: auto; /* Allow vertical scrolling */
         }
         .header {
             width: 100%;
