--- a/mitaanddaddy.html
+++ b/mitaanddaddy.html
@@ -16,10 +16,11 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            height: 100vh;
-            background: linear-gradient(135deg, #ff9a9e, #76f59c);
+            min-height: 100vh; /* Change from height: 100vh to min-height */
+            background: linear-gradient(135deg, #ff9a9e, #fad0c4);
             font-family: Atma, sans-serif;
             text-align: center;
+            overflow-y: auto; /* Allow vertical scrolling */
         }
         .header {
             width: 100%;
