--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
         .header a:hover {
             color: white;
         }
+        .gift-link{
+            color: rgb(255, 79, 108);
+        }
         .container {
             background: rgba(255, 255, 255, 0.85);
             padding: 30px;
@@ -122,6 +125,7 @@
         @media (max-width: 1200px) {
             .container{
                 max-width: 70%;
+                margin-bottom: 10%;
             }
         }
     </style>
@@ -141,8 +145,8 @@
         <h1>Happy Birthday Mitraaa ♡</h1>
         <p>It's my mita's birthdayy &lt;33333</p>
         <p class="para">This is the most special gift for the most special person in the world! Mitra is turrning 22 today and she is a big lady now. So, yashchik wanted to write this to her as a reminder that we are celebrating this year together of many more to go and that our love is forever strong.</p>
-        <p class="para">I don't ven know where to begin. You are my favorite person in the whole world, the most beautiful, the strongest girl I know and my lovely girl. You are also super silly but it's otay, it makes me wuw you even more. It makes me happy seeing you grow and having the opportunity to be with you with every step of life. You are like a star that came to Earth and blessed me with everything I could ever ask for. You ability to always stay strong no matter the situation makes me stand even stronger with you. We have been through the toughest ups and downs together through every phase our life but our love and trust has overcome all. From going to sleep even through my toughest nights and waking up thinking of you, you have always been there for me and with me. Truly a blessing. Some people might say you are 1 in a million or a billion but for me mitra... you are the only one. Nothing can ever give me what you give me, your love, your care, your everything. From when you stay up till late and wait for me to come to bed to all the silly laughs while watching movies together and eating, that's everything I need in my life. It's You &lt;3</p>
-        <p class="para">I could keep writing this but even the words won't be enough to tell you how much I love you.</p>
+        <p class="para">I don't ven know where to begin. You are my favorite person in the whole world, the most beautiful, the strongest girl I know and my lovely girl. You are also super silly but it's otay, it makes me wuw you even more. It makes me happy seeing you grow and having the opportunity to be with you with every step of life. You are like a star that came to Earth and blessed me with everything I could ever ask for. You ability to always stay strong no matter the situation makes me stand even stronger with you. We have been through the toughest ups and downs together through every phase our life but our love and trust has overcome all. From going to sleep even through my toughest nights and waking up thinking of you, you have always been there for me and with me. Truly a blessing. Some people might say you are 1 in a million or a billion but for me mitra... you are the only one. Nothing can ever give me what you give me, your love, your care, your everything. From when you stay up till late and wait for me to come to bed to all the silly laughs while watching movies together and eating, that's everything I need in my life. It's You &lt;3. Stay by my side like this this year, and the next and forever after. And like I always say, I love you Always.</p>
+        <p class="para">I could keep writing this but even the words won't be enough to tell you how much I love you, that's why I have created this little gift for you <a class="gift-link" href="surprise.html">I love you ♡</a></p>
     </div>
     <div class="bottom-decor bottom-left">
         <div class="sparkle"></div>
