--- a/surprise.html
+++ b/surprise.html
@@ -37,11 +37,15 @@
         .header a:hover {
             color: white;
         }
-        .image{
-            margin-top: 18%;
+        .image {
+            margin-top: 9vh;
             border: 5px solid black;
             border-radius: 1%;
+            max-height: 80vh;
+            max-width: 90vw;
+            object-fit: contain;
         }
+
         .decorations {
             position: absolute;
             width: 100%;
@@ -123,7 +127,7 @@
         <div class="balloon"></div>
     </div>
     <div>
-        <img class="image" src="surprise.png">
+        <img class="image" src="surprise.jpeg">
     </div>
     <div class="bottom-decor bottom-left">
         <div class="sparkle"></div>
