--- a/mitaanddaddy.html
+++ b/mitaanddaddy.html
@@ -16,11 +16,10 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            min-height: 100vh; /* Change from height: 100vh to min-height */
-            background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+            height: 100vh;
+            background: linear-gradient(135deg, #ff9a9e, #76f59c);
             font-family: Atma, sans-serif;
             text-align: center;
-            overflow-y: auto; /* Allow vertical scrolling */
         }
         .header {
             width: 100%;
@@ -61,6 +60,14 @@
         .balloon:nth-child(3) {
             left: 50%;
             background: #00c3ff;
+        }
+        .image {
+            margin-top: 9vh;
+            border: 5px solid black;
+            border-radius: 1%;
+            max-height: 80vh;
+            max-width: 90vw;
+            object-fit: contain;
         }
         .bottom-decor {
             position: fixed;
@@ -113,6 +120,9 @@
         <div class="balloon"></div>
         <div class="balloon"></div>
         <div class="balloon"></div>
+    </div>
+    <div>
+        <img class="image" src="collage.jpg" alt="i love you">
     </div>
     <div class="bottom-decor bottom-left">
         <div class="sparkle"></div>
